[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/character.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/scoreboard.tscn" type="PackedScene" id=4]

[node name="GameScene" type="Node"]
script = ExtResource( 1 )

[node name="Level" type="Node" parent="."]

[node name="Guys" type="Node" parent="."]

[node name="Player" parent="Guys" instance=ExtResource( 2 )]
visible = false
position = Vector2( 560, 272 )
z_index = 1
is_bot = false
nickname = "Player"
skin_color = Color( 1, 1, 1, 1 )

[node name="Particles" type="Node" parent="."]

[node name="Shots" type="Node" parent="."]

[node name="GUI" parent="." instance=ExtResource( 3 )]

[node name="Scoreboard" parent="GUI" instance=ExtResource( 4 )]

[node name="QuitDialog" type="ConfirmationDialog" parent="GUI"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
popup_exclusive = true
window_title = "Quit"
dialog_text = "Quit to menu?"
[connection signal="on_change_weapon" from="Guys/Player" to="." method="_on_Player_change_weapon"]
[connection signal="on_health_change" from="Guys/Player" to="." method="_on_Player_on_health_change"]
[connection signal="on_shoot" from="Guys/Player" to="." method="_on_Player_shoot"]
[connection signal="confirmed" from="GUI/QuitDialog" to="." method="_on_QuitDialog_confirmed"]
[connection signal="hide" from="GUI/QuitDialog" to="." method="_on_QuitDialog_hide"]
